# backend

./: .env.example  .env.sample  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile  openapi.json
.github/workflows/: docker.yml  release.yml
src/: app.rs  config.rs  context.rs  errors.rs  lib.rs  logger.rs  main.rs  routes.rs  swagger.rs  utils.rs
src/analyzers/: mod.rs  rust.rs
src/contracts/: allocation.rs  inquire.rs  mod.rs  receipt.rs  sign.rs  types.rs  workflow.rs
src/contracts/impls/: starknet.rs
src/handlers/: airdrop.rs  allocation.rs  contribution.rs  contributor.rs  dependency.rs  mod.rs  project.rs  wallet.rs  workflow.rs
src/requests/: mod.rs  wallet.rs  workflow.rs
src/responses/: mod.rs  project.rs  workflow.rs
src/services/: analyzer.rs  contract.rs  contracts.rs  github_repo.rs  mod.rs  project.rs  storage.rs  workflow.rs
