[package]
name = "deprank-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/deprank/backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deprank"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4" }
clap = { version = "4.5.39", features = ["derive", "env"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
starknet = "0.15.1"
starknet-ff = "0.3.7"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
