[package]
name = "deprank-server"
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/deprank/backend"

default-run = "deprank-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deprank"
path = "src/lib.rs"

[[bin]]
name = "deprank-server"
path = "src/bin/deprank-server.rs"

[[bin]]
name = "openapi-generator"
path = "src/bin/openapi-generator.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6" }
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenv = "0.15.0"
flate2 = "1.1.5"
ghrepo = "0.7.1"
http-body-util = "0.1.3"
octocrab = "0.48.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
starknet = "0.17.0"
starknet-ff = "0.3.7"
tar = "0.4.44"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
uuid = { version = "1.20.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
